# nebula-shield

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: cdk-synth.yml  ci.yml
docs/: architecture.md  remediation_engine.md  threat_model.md
events/cloudtrail/: delete_public_access_block.json  s3_put_bucket_policy.json
infra/: app.py  app_output.txt  cdk.json  setup.py  synthesize.py
infra/lambdas/: requirements.txt
infra/lambdas/decision_engine/: handler.py
infra/lambdas/detection/: handler.py
infra/lambdas/remediation/s3/: handler.py
infra/stacks/: core_stack.py  detection_stack.py  observability_stack.py  remediation_stack.py
simulation/: aws_mock.py  aws_mock_enhanced.py  decision_simulator.py  event_simulator.py  full_integration.py  remediation_simulator.py
src/decision_engine/: handler.py  rule_evaluator.py  state_machine.py
src/detection/: s3_detector.py
src/models/: event.py  finding.py  remediation_plan.py
src/remediation/: base_remediator.py  handler.py  iam_remediator.py  orchestrator.py  s3_remediator.py  security_group_remediator.py
tests/unit/: test_decision_engine.py  test_models.py  test_remediation.py
